--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  #notification  
+  timezone: ^0.10.1  
+  flutter_local_notifications: ^19.3.0
+
+  #db
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.5
+  
+  #state management
   provider: ^6.1.5
+  flutter_timezone: ^4.1.1
 
 dev_dependencies:
   flutter_test:
