--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_tts: ^4.2.3
   shimmer: ^3.0.0
   android_notification_icons: ^0.0.1
+  intl: ^0.20.2
 
 assets:
   - assets/notification/noti.png
