--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,9 @@ dependencies:
   shimmer: ^3.0.0
   android_notification_icons: ^0.0.1
   intl: ^0.20.2
-
+  google_fonts: ^6.2.1
+  persistent_bottom_nav_bar: ^6.2.1
+  fl_chart: ^1.0.0
 assets:
   - assets/notification/noti.png
 dev_dependencies:
